<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SmartManageRest</string>
    <string name="nav_header_desc">SmartManageRest Navigation header</string>
    <string name="action_help">Help</string>
    <string name="app_name">SmartManageRest</string>
    <string name="designation_app">SmartManageRest</string>
    <string name="designation_copyright">©Josamuna 2019</string>
    <string name="designation_textSplash">Votre appui à la bonne gestion des matériels</string>
    <string name="content_description_logo_splash">Icône de l\'application</string>
    <string name="designation_message_login">Connection to database</string>
    <string name="btn_exit_login">Exit</string>
    <string name="btn_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_main">Use SmartManageRest</string>
    <string name="menu_capture">Capture</string>
    <string name="menu_search">Search</string>
    <string name="menu_History">History</string>
    <string name="menu_About">About</string>
    <string name="btn_make_capture">Capture QRCode</string>
    <string name="designation_valeur_qrcode">Value QRCode captured</string>
    <string name="btn_save_captured_qrcode">Save scanned code</string>
    <string name="txt_hint_qrCode_captured">QrCode Has not been scanned !!</string>
    <string name="hint_database_name">Database name</string>
    <string name="hint_server_name">Server name or IP Address</string>
    <string name="designation_database_preference">Database parameters</string>
    <string name="btn_save_database_preference">Save parameters</string>
    <string name="description_img_login">Login image</string>
    <string name="description_img_username_login">Username image</string>
    <string name="description_img_password_login">Password image</string>
    <string name="description_img_database">Database image</string>
    <string name="description_img_ip_address">IP Address image</string>
    <string name="description_img_database_params">Username image</string>
    <string name="description_img_qrcode_capture">QrCode image</string>
    <string name="description_img_qrcode_validate_search">Search value captured</string>
    <string name="description_img_about">Application logo about</string>
    <string name="description_img_default_fragment">Home image</string>
    <string name="description_img_item_qrcode">Item image</string>
    <string name="hint_txt_qrcode_validate_search">Search value captured</string>
    <string name="designation_qrcode_capture">View Captured QrCode</string>
    <string name="btn_validate_search_captured_qrcode">Search value from database</string>
    <string name="hint_result_qrcode_search">There is no value found</string>
    <string name="hint_search">Search here</string>
    <string name="about_string">About string</string>
    <string name="bigString">Le droit du travail peut être défini comme étant un ensemble des règles qui s’appliquent
        aux relations individuelles et collectives à l’employeur et à l’employé tant individuellement que collectivement
        et découlant d’un contrat de travail.
        Le contrat de travail est défini par l’article 7 point 3 de la Loi n°16/010 du 15 juillet 2016 modifiant et
        complétant la Loi n° 015-2002 portant Code du travail comme étant « toute convention, écrite ou verbale, par
        laquelle une personne, le travailleur, s’engage à fournir à une autre personne, l’employeur, un travail manuel
        ou autre sous la direction et l’autorité directe ou indirecte de celui-ci et moyennant rémunération ».
        Le travailleur est toute personne physique en âge de contracter, quels que soient son sexe, son état civil et sa
        nationalité, qui s’est engagée à mettre son activité professionnelle, moyennant rémunération, sous la direction
        et l’autorité d’une personne physique ou morale, publique ou privée, dans les liens d’un contrat de travail.
        L’employeur est toute personne, physique ou morale, de droit public ou privé, qui utilise les services d’un ou
        de plusieurs travailleurs en vertu d’un contrat de travail.
        La sécurité sociale, selon la conception large formulée par le Bureau International du Travail (BIT), « est
        l’ensemble des institutions, mesures, droits et obligations dont l’objectif premier est de fournir ou de
        s’efforcer de fournir en fonction de règles spécifiques, une sécurité du revenu et des soins médicaux à chaque
        membre de la société ».
        Dans le cadre de cet enseignement, compte tenu de son volume horaire, nous n’examinerons que la partie relative
        à la sécurité sociale des personnes vulnérables afin de vous doter des outils nécessaires vous permettant
        d’acquérir les notions essentielles en lien avec la défense des droits sociaux garantis aux personnes
        vulnérables en RDC : veuves, handicapées, enfants, etc.
    </string>
    <string name="str_content_help">
        <b>SmartManageRest</b>
        is very easy to use, follow these steps : \n\n
        <font color="#2259e1">
            <b>1.<u>Make connection to Database</u> :
            </b>
        </font>
        \n\n
        Before you use this application, you must have a valid credential to allow you to be connect to the remote SQL
        Server Database. This is made by put them
        in the login UI, after you are specified the valid <em>Database name</em> and <em>Server name (or IP Address)
    </em> and has saved them.\n\n
        <font color="#2259e1">
            <b>2.<u>Use main menu to navigate through application</u> :
            </b>
        </font>
        \n\n
        After successfully connection to Database, the main menu appear with five sub menus:\n
        <b>
            <i>A.Sub menu Capture</i>
        </b>
        : Allow you to capture a QrCode and after that, you must saved it in your phone for next use (For that, simple
        click to save button).\n
        <b>
            <i>B.Sub menu Search</i>
        </b>
        : Allow to perform any search according QrCode you have been save precedly. this search is made from the remote
        SQL Server Database, which you have been connected.\n
        <b>
            <i>C.Sub menu History</i>
        </b>
        : After saving some QrCode, you can retrieve them in history, that help you to make search, to view at another
        ui, to copy it into clipboard or make
        deletion (For one selection using on long click item or choose drop down menu) of selected item or all saved
        items.\n
        <b>
            <i>D.Sub menu About</i>
        </b>
        : To have more information on this application, go to this sub menu.\n\n
        Finally, for more details and comments about application, please ask at this e-mail address :
        <font color="#0c8725">
            <b>
                <u>josamuna2009@gmail.com</u>
            </b>
        </font>
        \n\n

    </string>

    <!--About String-->
    <string name="str_title1">SmartManageRest</string>
    <string name="str_title2">Copyright ©
        <b>Josamuna 2019</b>
    </string>
    <string name="str_title3">To have more details about this application, please contact me at this e-mail address
        <b>
            <i>josamuna2009@gmail.com</i>
        </b>
    </string>
    <string name="str_title4">
        <u>
            <i>
                <b>Made by Ir. Isamuna Nkembo Josué</b>
            </i>
        </u>
    </string>

    <!-- Fragment Title-->
    <string name="title_default_fragment">Home</string>
    <string name="title_fragment_capture_main">Capture</string>
    <string name="title_fragment_capture_qrcode">QrCode Capture</string>
    <string name="title_fragment_history">View QrCode Data</string>
    <string name="title_fragment_about">About Application</string>
    <string name="title_fragment_search">Search into Database</string>
    <string name="title_fragment_show_content">Show content selected</string>
    <string name="title_fragment_help">Help</string>

    <!-- Popup Menu List Items RecycleView-->
    <string name="menu_view_content">Show content</string>
    <string name="menu_select_search_value">Select for search</string>
    <string name="menu_copy_content">Copy to clipboard</string>
    <string name="menu_delete_content">Delete</string>
    <string name="menu_delete_all_content">Delete all</string>
    <string name="button_option_menu">&#8942;</string>

    <!-- Title Menu Toolbar-->
    <string name="str_menu_dropdown">Drop down Menu</string>
</resources>
