<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_capture"
                android:icon="@drawable/ic_menu_camera1"
                android:title="@string/menu_capture"/>
        <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_menu_search1"
                android:title="@string/menu_search"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_menu_history"
                android:title="@string/menu_History"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_About"/>
    </group>
</menu>
