<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity"
        android:orientation="vertical"
        android:background="@color/color_background_splash">
    <ImageView
            android:layout_width="107dp"
            android:layout_height="133dp"
            app:srcCompat="@drawable/logosmartmanage"
            android:id="@+id/imgLogoApp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/content_description_logo_splash"/>
    <TextView
            android:text="@string/designation_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/txtAppName"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/color_designation_app"
            android:textSize="@dimen/dim_designation_app"
            android:fontFamily="sans-serif-smallcaps"/>
    <TextView
            android:text="@string/designation_textSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/txtTextSplash"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/color_designation_textSplash"
            android:textSize="@dimen/dim_designation_text_splash"
            android:fontFamily="serif"/>
    <TextView
            android:text="@string/designation_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/txtCopyright"
            android:gravity="center"
            android:layout_marginTop="210dp"
            android:textSize="@dimen/dim_designation_copyright"
            android:textColor="@color/color_designation_copyright"
            android:fontFamily="casual"/>
</LinearLayout>