<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DatabaseActivity"
        android:orientation="vertical"
        android:background="@drawable/background1">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txtLabelDatabaseParams"
              android:text="@string/designation_database_preference"
              android:textColor="@color/color_designation_message_login"
              android:fontFamily="sans-serif-smallcaps"
              android:textSize="@dimen/dim_designation_message_login"
              android:gravity="center"
              android:textAlignment="center"
              android:layout_marginTop="100dp"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:layout_marginBottom="80dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/edtDatabaseName"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:layout_marginBottom="50dp"
              android:hint="@string/hint_database_name"
              android:inputType="textPersonName" android:importantForAutofill="no"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/edtServerName"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:layout_marginBottom="80dp"
              android:hint="@string/hint_server_name"
              android:inputType="textPersonName" android:importantForAutofill="no"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_database_params"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            android:text="@string/btn_save_database_preference"
            android:background="@drawable/background5"
            android:textColor="@android:color/white"/>

</LinearLayout>